--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
 			"app/commands",
 			"app/controllers",
 			"app/models",
+		    "app/providers",
 			"app/database/migrations",
 			"app/database/seeds",
 			"app/tests/TestCase.php",
