--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
     "tests"
   ],
   "dependencies": {
-    "skeleton": "https://github.com/dhg/Skeleton.git#2.0.*"
+    "skeleton": "https://github.com/dhg/Skeleton.git#2.0.*",
+    "qrcode" : "https://github.com/davidshimjs/qrcodejs.git"
   }
 }
