--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         }
     ],
 	"require": {
-        "php": "~5.5.0",
+	  	"php": ">=5.5.3",
         "ext-bcmath": "*",
 		"laravel/framework": "4.2.*",
         "blocktrail/blocktrail-sdk": "1.2.*"
